--- a/mynginx-service.yml
+++ b/mynginx-service.yml
@@ -3,10 +3,9 @@ kind: Service
 metadata:
   name: mynginx-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: mynginx
   ports:
     - port: 80
-      targetPort: 8000
-      nodePort: 31808
+      targetPort: 80
